--- a/index.html
+++ b/index.html
@@ -32,43 +32,36 @@
   <input type="text" class="form-control mb-3" id="result" disabled>
 
   <div class="row g-2 mb-3">
-    <div class="col"><button class="btn btn-danger" onclick="clearResult()">AC</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="deleteLast()">⌫</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('%')">%</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('/')">/</button></div>
-
-   
-  </div>
-  <div class="row g-2 mb-2">
-    <div class="col"><button class="btn btn-primary" onclick="append('7')">7</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('8')">8</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('9')">9</button></div>
-        <div class="col"><button class="btn btn-primary" onclick="append('+')">+</button></div>
-
-  <div class="row g-2 mb-2">
-   
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-danger w-100" onclick="clearResult()">AC</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="deleteLast()">⌫</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('%')">%</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('/')">/</button></div>
   </div>
 
-  <div class="row g-2 mb-2">
-    <div class="col"><button class="btn btn-primary" onclick="append('4')">4</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('5')">5</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('6')">6</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('*')">*</button></div>
-
+  <div class="row g-2 mb-3">
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('7')">7</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('8')">8</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('9')">9</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('+')">+</button></div>
   </div>
 
-  <div class="row g-2 mb-2">
-    <div class="col"><button class="btn btn-primary" onclick="append('1')">1</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('2')">2</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('3')">3</button></div>
-    <div class="col"><button class="btn btn-primary" onclick="append('0')">0</button></div>
-
+  <div class="row g-2 mb-3">
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('4')">4</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('5')">5</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('6')">6</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('*')">*</button></div>
   </div>
 
-  <div class="row g-1 mb-2">
-    <div class="col-4"><button class="btn btn-primary" onclick="append('.')">.</button></div>
-   <div class="col-7"><button class="btn btn-primary w-100" onclick="calculate()">=</button></div>
+  <div class="row g-2 mb-3">
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('1')">1</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('2')">2</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('3')">3</button></div>
+    <div class="col-3 col-sm-3 col-md-3"><button class="btn btn-primary w-100" onclick="append('0')">0</button></div>
+  </div>
 
+  <div class="row g-2 mb-3">
+    <div class="col-6 col-sm-6 col-md-6"><button class="btn btn-primary w-100" onclick="append('.')">.</button></div>
+    <div class="col-6 col-sm-6 col-md-6"><button class="btn btn-primary w-100" onclick="calculate()">=</button></div>
   </div>
 </div>
 
